# android_silk_v3_decoder

./: .gitignore  README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/jni/: decoder.c  decoder.cpp  silk.c
app/jni/include/: SKP_Silk_Inlines.h  lame.h  silk.h
app/jni/libmp3lame/: VbrTag.c  bitstream.c  encoder.c  gain_analysis.c  id3tag.c  lame.c  machine.h  newmdct.c  presets.c  psymodel.c  quantize.c  quantize_pvt.c  takehiro.c  util.c  vbrquantize.c
app/src/androidTest/java/com/ketian/android/silkv3/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ketian/android/silkv3/: App.java  App.kt  ExportFragment.java  ExportFragment.kt  MainActivity.java  MainActivity.kt  PathUtils.java  PathUtils.kt  VoiceFragment.java  VoiceFragment.kt
app/src/main/java/com/ketian/android/silkv3/jni/: JNI.java  JNI.kt
app/src/main/res/layout/: activity_main.xml  export_item_layout.xml  fragment_export.xml  fragment_voice.xml  item_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/ketian/android/silkv3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  CMakeLists.txt  decoder.c  decoder.cpp  silk.c
jni/include/: SKP_Silk_SigProc_FIX.h  silk.h
